--- a/Web.config
+++ b/Web.config
@@ -48,6 +48,10 @@
                 <add value="client/app/index.html" />
             </files>
         </defaultDocument>
+        <handlers>
+            <remove name="svc-Integrated" />
+            <add name="svc-Integrated" path="*.svc" verb="*" type="System.ServiceModel.Activation.HttpHandler, System.ServiceModel, Version=3.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" resourceType="Unspecified" requireAccess="Script" preCondition="integratedMode,runtimeVersionv2.0" />
+        </handlers>
   </system.webServer>
 
 </configuration>
