--- a/Web.config
+++ b/Web.config
@@ -16,21 +16,24 @@
     
       </services>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="web">
+          <webHttp />
+        </behavior>
+      </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="ServiceBehavior">
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
-    <endpointBehaviors>
-      <behavior name="web">
-        <webHttp />
-      </behavior>
-    </endpointBehaviors>
     </behaviors>
-	<serviceHostingEnvironment multipleSiteBindingsEnabled="true" />
+	<serviceHostingEnvironment aspNetCompatibilityEnabled="true"
+   multipleSiteBindingsEnabled="true" />
     <protocolMapping>
       <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>
