--- a/client/bower.json
+++ b/client/bower.json
@@ -7,7 +7,9 @@
     "es5-shim": "~2.0.8",
     "angular-cookies": "~1.0.7",
     "angular-ui-router": "*" ,
-	"angular-animate": "~1.3.1"
+	"angular-animate": "~1.3.1",
+	"angular-translate": "~2.5.2"
+ 
   }
  
 }
