--- a/client/bower.json
+++ b/client/bower.json
@@ -8,7 +8,8 @@
     "angular-cookies": "~1.0.7",
     "angular-ui-router": "*" ,
 	"angular-animate": "~1.3.1",
-	"angular-translate": "~2.5.2"
+	"angular-translate": "~2.5.2",
+	"bootstrap":"~3.3.1"
  
   }
  
