--- a/client/bower.json
+++ b/client/bower.json
@@ -9,7 +9,8 @@
     "angular-ui-router": "*" ,
 	"angular-animate": "~1.3.1",
 	"angular-translate": "~2.5.2",
-	"bootstrap":"~3.3.1"
+	"bootstrap":"~3.3.1",
+	"sweetalert"
  
   }
  
