--- a/client/bower.json
+++ b/client/bower.json
@@ -10,7 +10,8 @@
 	"angular-animate": "~1.3.1",
 	"angular-translate": "~2.5.2",
 	"bootstrap":"~3.3.1",
-	"sweetalert"
+	"sweetalert":"*",
+	"angular-local-storage":"1.1.5"
  
   }
  
